--- a/common-components/ui-components/ButtonMessage/ButtonMessage.scss
+++ b/common-components/ui-components/ButtonMessage/ButtonMessage.scss
@@ -6,7 +6,7 @@
   margin: 0.3rem 0 0.7rem 0;
 
   span {
-    padding: 0 0.5rem;
+    padding: 0.25rem 0.5rem;
     background-color: get-color(sea-green-12);
     color: get-color(white);
     border-radius: 8px;
