--- a/common-components/ui-components/FormElements/FormCheckbox/FormCheckbox.scss
+++ b/common-components/ui-components/FormElements/FormCheckbox/FormCheckbox.scss
@@ -17,6 +17,8 @@
   }
 
   &__item {
+    position: relative;
+
     input[type=checkbox] {
       display: none;
 
@@ -51,6 +53,19 @@
             box-shadow: inset 0 0 0 1px get-color(sapphire-blue-10);
           }
         }
+      }
+    }
+
+    &--nolabel {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+
+      &::before {
+        position: static !important;
+        transform: none !important;
+        margin: 0;
       }
     }
   }
