--- a/common-components/ui-components/DataTable/DataTable.scss
+++ b/common-components/ui-components/DataTable/DataTable.scss
@@ -34,7 +34,7 @@
     padding: 12px 24px 12px 16px;
     border-bottom: 1px solid get-color(black-coral-2);
     vertical-align: middle;
-    max-width: fit-content;
+    max-width: 300px;
 
     p{
       white-space: break-spaces;
