--- a/common-components/ui-components/HistoricalChat/HistoricalChat.scss
+++ b/common-components/ui-components/HistoricalChat/HistoricalChat.scss
@@ -146,17 +146,19 @@
       #{$self} {
         &__group-header {
           display: flex;
-          justify-content: flex-end;
+          justify-content: flex-start;
           align-items: center;
         }
 
-        &__group-initials {
+        &__group-initials,
+        &__group-event-initials {
           background-color: get-color(black-coral-10);
           color: get-color(white);
           position: relative;
         }
 
-        &__group-name {
+        &__group-name,
+        &__group-event-name {
           text-align: left;
           margin-left: 0;
           font-size: $veera-font-size-100;
@@ -167,7 +169,7 @@
           display: flex;
           flex-direction: column;
           gap: 4px;
-          align-items: flex-end;
+          align-items: flex-start;
           padding-left: 50px;
         }
 
